[AA-67] SOLVED CameraSyncService was reopened after a STOP_ACTION was sent. This was caused because in the onDestroy, retryLater() was executed. Now a flag STOPPED is implemented. If the service has received a STOP_ACTION, retryLater is not executed.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -156,6 +156,7 @@
 	<string name="download_failed">Download failed</string>
 	<string name="download_downloaded">downloaded</string>
 	<string name="download_downloading">Downloading</string>
+	<string name="download_preparing_files">Preparing files</string>
     <string name="already_downloaded">Already downloaded</string>
     <string name="download_began">Download has started</string>
     <string name="download_cancel_downloading">Do you want to cancel the download?</string>
