[AA-64] SOLVED for file links and folder links - Folder links and file links can be opened now by not logged users - Import/Download file links screen is modified (now it's an activity, not a dialog) - Streaming in folder links

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="general_no">No</string>
     <string name="general_move_to">Move</string>
     <string name="general_copy_to">Copy</string>
+    <string name="general_import_to">Import</string>
     <string name="general_create">Create</string>
     <string name="general_upload">File Upload</string>
     <string name="general_download">Download</string>
