PhotoSync viewer in ManagerActivity (first approach) - Creating the PhotoSync directory if it doesn't exist - Listing the filelist (list view)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -119,6 +119,7 @@
 	<string name="section_image_viewer">Photo Sync</string>
 	<string name="section_transfers">Transfers</string>
 	<string name="section_account">My Account</string>
+	<string name="section_photo_sync">Photo Sync</string>
 	<string name="used_space_text">Used Space</string>
 	<string name="used_space">%1$s of %2$s</string>
 	
