PhotoSync special View (list) without menu

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,4 +301,18 @@
     
     <string name="settings_about">About</string>
     <string name="settings_about_app_version">App version</string>
+    
+    <string name="january">January</string>
+    <string name="february">February</string>
+    <string name="march">March</string>
+    <string name="april">April</string>
+    <string name="may">May</string>
+    <string name="june">June</string>
+    <string name="july">July</string>
+    <string name="august">August</string>
+    <string name="september">September</string>
+    <string name="october">October</string>
+    <string name="november">November</string>
+    <string name="december">December</string>
+    
 </resources>
