--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -143,6 +143,7 @@
 	<string name="file_properties_shared_folder_shared_with">Shared with: </string>
 	<string name="file_properties_shared_folder_permissions">Permissions</string>
 	<string name="file_properties_shared_folder_select_contact">Share with</string>
+	<string name="file_properties_send_file_select_contact">Send to</string>
 	
 	<string name="contact_properties_activity">Contact</string>
 	<string name="contact_properties_content">Content:</string>
