Resolved: Bug #647 - Incorrect functionality in button "send link" of shared folders Bug #651 - Sync problem in shared folders view Task #674 - Implement multiselection in the FileContactList Activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,6 +52,11 @@
         <item quantity="other">files</item>
     </plurals>
     
+     <plurals name="general_num_contacts">
+        <item quantity="one">contact</item>
+        <item quantity="other">contacts</item>
+    </plurals>
+    
     <plurals name="general_num_folders">
         <item quantity="one">folder</item>
         <item quantity="other">folders</item>
