--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -332,4 +332,5 @@
     <string name="november">November</string>
     <string name="december">December</string>
     
+    <string name="pdf_file_viewer_activity">MEGA PDF Viewer</string>
 </resources>
