--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -339,26 +339,29 @@
     
     <!-- Insertado -->
     
-    <string name="about">About</string>
-	<string name="goto_page">Go to page…</string>
+	<string name="open_pdf_action_goToPage">Go to page</string>
 	<string name="goto_page_dialog_title">Go to page</string>
 	<string name="goto_page_go_button">Go</string>
-	<string name="rotate_page_left">Rotate left</string>
-	<string name="rotate_page_right">Rotate right</string>
-	<string name="find_text">Find…</string>
+	<string name="open_pdf_action_rotate_page_left">Rotate left</string>
+	<string name="open_pdf_action_rotate_page_right">Rotate right</string>
+	<string name="open_pdf_action_find_text">Find…</string>
 	<string name="find_dialog_title">Find text</string>
 	<string name="find_go_button">Find</string>
 	<string name="find_cancel_button">Cancel</string>
-	<string name="clear_find_text">Clear find</string>
+	<string name="open_pdf_action_clear_find_text">Clear find</string>
 	<string name="choose_file">Open…</string>
 	<string name="toggle_invert">Invert</string>
 	<string name="toggle_fine_zoom">Toggle fine zoom</string>
 	<string name="set_as_home">Set current folder as home</string>
 	<string name="go_home">Home</string>
 	<string name="cancel">Cancel</string>
+	<string name="open_pdf_action_zoomDown">Zoom Down</string>
+	<string name="open_pdf_action_zoomUp">Zoom Up</string>
+	<string name="open_pdf_action_zoomWidth">Zoom Width</string>
 	<string name="searching_for">Searching for "%1$s"</string>
 	<string name="page_of">Page %1$d of %2$d</string>
-	<string name="options">Settings</string>
+	<string name="open_pdf_action_options">Settings</string>
+		<string name="options">Settings</string>
 	<string name="zoom_animation">Zoom buttons</string>
 	<string-array name="zoom_animations">
 		<item>100</item>
