Feature #923 - Zip Viewer

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -333,7 +333,7 @@
     <string name="december">December</string>
     
     <string name="pdf_file_viewer_activity">MEGA PDF Viewer</string>
-    
+    <string name="zip_browser_activity">ZIP Browser</string>
     
     
     
