Feature #941 (part I) & reordering some code
TODO: once unzziped, open files (part II)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -583,4 +583,7 @@
     <string name="close">Close</string>
     <string name="text_reflow">Text Reflow</string>
     
+    <string name="ZIP_download_permission">The zip file will be downloaded and unzipped</string>
+    <string name="ZIP_unzip_permission">The zip file will be unzipped </string>
+    
 </resources>
