--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -281,14 +281,14 @@
     <string name="settings_camera_notif_complete">Photo Sync complete</string>
     
     <string name="settings_storage">Storage</string>
-    <string name="settings_camera_upload">Photo Sync</string>
+    <string name="settings_camera_upload">Camera Upload</string>
     <string name="settings_pin_lock">PIN Lock</string>
     
     <string name="settings_storage_download_location">Default download location</string>
     <string name="settings_storage_ask_me_always">Ask download location always</string>
     
-    <string name="settings_camera_upload_on">Turn on Photo Sync</string>
-    <string name="settings_camera_upload_off">Turn off Photo Sync</string>
+    <string name="settings_camera_upload_on">Turn on Camera Upload</string>
+    <string name="settings_camera_upload_off">Turn off Camera Upload</string>
     <string name="settings_camera_upload_how_to_upload">How to upload</string>
     
     <string-array name="settings_camera_upload_how_to_entries">
