--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="general_pro_3">Pro III</string>
     
     <string name="action_logout">Logout</string>
-    <string name="action_add">Add</string>
-    <string name="action_create_folder">Create folder</string>
+    <string name="action_add">Upload&#8230;</string>
+    <string name="action_create_folder">Create new folder</string>
     <string name="action_upload">Upload to</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
@@ -39,7 +39,8 @@
     <string name="action_sort_by">Sort by&#8230;</string>
     <string name="action_help">Help</string>
     <string name="action_upgrade_account">Upgrade account</string>
-    <string name="hello_world">PEPE</string>
+    <string name="action_select">Select</string>
+    <string name="action_grid">Thumb view</string>
     <string name="botonOcultarActionBar">Ocultar</string>
     <string name="botonVerActionBar">Ver</string>
     
@@ -134,9 +135,9 @@
 	<string name="used_space_text">Used Space</string>
 	<string name="used_space">%1$s of %2$s</string>
 	
-	<string name="file_browser_empty_cloud_drive">Empty Cloud Drive</string>
+	<string name="file_browser_empty_cloud_drive">No files in your Cloud Drive</string>
 	<string name="file_browser_empty_rubbish_bin">Empty Rubbish Bin</string>
-	<string name="file_browser_empty_shared_with_me">Empty Inbox</string>
+	<string name="file_browser_empty_shared_with_me">No shared files</string>
     <string name="file_browser_empty_folder">Empty Folder</string>
 	
 	<string name="file_properties_activity">Properties</string>
