--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="action_list">List view</string>
     <string name="botonOcultarActionBar">Ocultar</string>
     <string name="botonVerActionBar">Ver</string>
+    <string name="action_export_master_key">Export Master Key</string>
+    <string name="toast_master_key">The master key has been exported into: </string>
     
     <string name="manager_activity">MEGA_COM</string>
     <string name="offline_activity">Saved for offline</string>
