Task #1098 - Adapting the UI in the screen Contacts Info

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -180,6 +180,9 @@
 	<string name="contact_file_list_activity">Content</string>
 	<string name="file_contact_list_activity">Shared with</string>
 	
+	<string name="contact_shared_files">Shared Files with:</string>
+	
+	
 	<string name="full_screen_image_viewer_label">Image Viewer</string>
 	
 	<string name="error_not_enough_free_space">Not enough free space</string>
