--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="botonOcultarActionBar">Ocultar</string>
     <string name="botonVerActionBar">Ver</string>
     <string name="action_export_master_key">Export Master Key</string>
+    <string name="action_remove_master_key">Remove Master Key</string>
     <string name="toast_master_key">The master key has been exported into: </string>
     
     <string name="manager_activity">MEGA_COM</string>
