Bug #1151 - In FileExplorerActivity the ActionBar title and the Button Text are not updated

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="action_remove_master_key">Remove Master Key</string>
     <string name="toast_master_key">The master key has been exported into: </string>
     
-    <string name="manager_activity">MEGA_COM</string>
+    <string name="manager_activity">CLOUD DRIVE</string>
     <string name="offline_activity">Saved for offline</string>
     
     <string name="search_files_and_folders">Search</string>
