--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,9 @@
      <string name="export_key_confirmation">Security Warning! High risk operation, continue?</string> 
      
      <string name="more_options_overflow">More options&#8230;</string> 
-    
+     
+    <string name="confirmation_remove_contact">Do you want to remove the contact </string>
+     
     <string name="general_pro_1">Pro I</string>
     <string name="general_pro_2">Pro II</string>
     <string name="general_pro_3">Pro III</string>
