Task #1046 - New workflow for Camera Uploads (in progress)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,8 +301,8 @@
     <string name="transfers_pause">All transfers are paused</string>
     
     <string name="cam_sync_initial_activity">Camera Sync</string>
-    <string name="cam_sync_wifi">Sync over Wi-Fi only</string>
-    <string name="cam_sync_data">Sync over Wi-Fi or data plan</string>
+    <string name="cam_sync_wifi">Wi-Fi only</string>
+    <string name="cam_sync_data">Wi-Fi or data plan</string>
     <string name="cam_sync_ok">OK</string>
     <string name="cam_sync_skip">Skip</string>
     <string name="cam_sync_syncing">Camera syncing</string>
