Bug #1298 - Empty view in "Shared with Me"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -165,7 +165,8 @@
 	
 	<string name="file_browser_empty_cloud_drive">No files in your Cloud Drive</string>
 	<string name="file_browser_empty_rubbish_bin">Empty Rubbish Bin</string>
-	<string name="file_browser_empty_shared_with_me">No shared files</string>
+	<string name="file_browser_empty_incoming_shares">No incoming shared folders</string>
+	<string name="file_browser_empty_outgoing_shares">No outgoing shared folders</string>
     <string name="file_browser_empty_folder">Empty Folder</string>
 	
 	<string name="file_properties_activity">Properties</string>
