--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -211,6 +211,7 @@
     <string name="download_cancel_downloading">Do you want to cancel the download?</string>
     <string name="download_touch_to_cancel">Touch to cancel download</string>
     <string name="error_file_size_greater_than_4gb">Most devices can\'t download files greater than 4GB. Your download will probably fail.</string>
+    <string name="intent_not_available">There isn\'t any available app to execute this file on your device</string>
 	
     <string name="context_share_image">Share image using</string>
     <string name="context_get_link">Share link</string>
