--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,7 +33,8 @@
      
      <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">More options&#8230;</string> 
      
-    <string name="confirmation_remove_contact" context="confirmation message before removing a contact">Do you want to remove the contact?</string>    
+    <string name="confirmation_remove_contact" context="confirmation message before removing a contact">Do you want to remove the contact</string>  
+    <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Do you want these contacts?</string>  
     
     <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Incoming Shares</string>
     <string name="action_change_mode_out" context="Folders that have been shared by the user to other MEGA users">Outcoming Shares</string>
