--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,10 +121,10 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
     <string name="name_text" context="Refers to the name of a folder or file.">name</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the terms of service">I agree with MEGA&apos;s &lt;a href=&amp;quot;https://mega.co.nz/mobile_privacy.html&amp;quot;&gt;terms of service&lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA&apos;s &lt;a href=&amp;quot;https://mega.co.nz/mobile_privacy.html&amp;quot;&gt;Terms of Service&lt;/a&gt;</string>
     <string name="already_account" context="Does the user already have a MEGA account">Already have an account?</string>
     
-    <string name="create_account_no_terms" context="warning dialog">You have to accept our terms of service.</string>
+    <string name="create_account_no_terms" context="warning dialog">You have to accept our Terms of Service.</string>
 	<string name="error_enter_username" context="Warning dialog">Please enter your name.</string>
     <string name="error_short_password" context="when creating the account">Password is too short</string>
     <string name="error_passwords_dont_match" context="when creating the account">Passwords do not match</string>
@@ -134,7 +134,7 @@
     <string name="create_account_confirm" context="">Please check your e-mail and click the link to login and confirm your account</string>
     <string name="create_account_creating_account">Connecting to the server: creating account</string>
     
-    <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term 'cloud' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
+    <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term &apos;cloud&apos; is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">Saved for Offline</string>
 	<string name="section_shared_with_me" context="title of the screen that shows all the folders that the user shares with other users and viceversa">Shared with me</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Rubbish Bin</string>
@@ -145,7 +145,7 @@
 	<string name="sent_requests_empty" context="the user has not sent any contact request to other users">No sent requests</string>
 	<string name="received_requests_empty" context="the user has not received any contact request from other users">No received requests</string>
 	<string name="section_transfers" context="Title for the file transfer screen (with the up &amp; download)">Transfers</string>
-	<string name="section_account" context="button to the settings of the user's account">My Account</string>
+	<string name="section_account" context="button to the settings of the user&apos;s account">My Account</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Camera Uploads</string>
 	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s of %2$s</string>
 	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">INCOMING</string>
@@ -165,10 +165,10 @@
 	<string name="file_properties_info_content" context="header of a status field for what content a user has shared to you">Content: </string>
 	<string name="file_properties_info_added" context="when was the file added in MEGA">Added: </string>
 	<string name="file_properties_info_modified" context="when was the file modified">Modified: </string>
-	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can't access the folder">No public link</string>
+	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can&apos;t access the folder">No public link</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Public link</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Full access</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don't use the symbol itself. Use &amp;)">Read &amp; write</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don&apos;t use the symbol itself. Use &amp;)">Read &amp; write</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Read-only</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Shared with: </string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon right click on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
@@ -195,7 +195,7 @@
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Do you want to cancel the download?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Touch to cancel download</string>
     <string name="error_file_size_greater_than_4gb" context="Warning message">Most devices can&apos;t download files greater than 4GB. Your download will probably fail.</string>
-    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn't any app that open that file. Example: a user downloads a pdf but doesn't have any app to read a pdf">There isn&apos;t any available app to execute this file on your device</string>
+    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn&apos;t any app that open that file. Example: a user downloads a pdf but doesn&apos;t have any app to read a pdf">There isn&apos;t any available app to execute this file on your device</string>
 	
     <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Share image using</string>
     <string name="context_get_link" context="create a link of a file and send it using an app from the device">Share link</string>
@@ -306,7 +306,7 @@
     
     <string name="upgrade_comment" context="the meaning of the asterisk in monthly* and annually* payment">* recurring subscription can be cancelled any time before renewal date.</string>
     
-    <string name="file_properties_get_link" context="the user can get the link and it's copied to the clipboard">The link has been copied to the clipboard</string>
+    <string name="file_properties_get_link" context="the user can get the link and it&apos;s copied to the clipboard">The link has been copied to the clipboard</string>
     
     <string name="full_image_viewer_not_preview" context="before sharing an image, the preview has to be downloaded">The preview has not been downloaded yet. Please wait.</string>
     
@@ -321,7 +321,7 @@
     <string name="cam_sync_data" context="how to upload the camera images. when Wi-Fi connected and using data plan">Wi-Fi or data plan</string>
     <string name="cam_sync_ok" context="Answer for confirmation dialog.">OK</string>
     <string name="cam_sync_skip" context="skip the step of camera upload">Skip</string>
-    <string name="cam_sync_syncing" context="The upload of the user's photos orvideos from their specified album is in progress.">Camera Upload in progress</string>
+    <string name="cam_sync_syncing" context="The upload of the user&apos;s photos orvideos from their specified album is in progress.">Camera Upload in progress</string>
     <string name="cam_sync_cancel_sync" context="confirmation question for cancelling the camera uploads">Do you want to cancel Camera Uploads?</string>
     <string name="settings_camera_notif_error_no_folder" context="Error message when an unavailable destination folder was selected">Destination folder is unavailable</string>
     <string name="settings_camera_notif_title" context="title of the notification when camera upload is enabled">Uploading camera images</string>
